[gd_scene load_steps=8 format=2]

[ext_resource path="res://sncs/CHAR.gd" type="Script" id=1]
[ext_resource path="res://Assets/chars/Char01_opt1.glb" type="PackedScene" id=2]
[ext_resource path="res://Assets/chars/Char01.material" type="Material" id=3]
[ext_resource path="res://Assets/chars/Char02.material" type="Material" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.6163, 1.01013, 0.566384 )

[sub_resource type="Animation" id=2]
resource_name = "Jump"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.181747, -1.94305, 0.181747, 1.94305, 2.57341, -0.178524, -0.00814748, 0.178524, 0.00814748, 0, -0.136396, 1.92131, 0.136396, -1.92131 ),
"times": PoolRealArray( 0, 0.500815, 0.992629 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "metarigAction"
tracks/0/type = "transform"
tracks/0/path = NodePath("metarig:spine.006")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 3.55517e-16, -2.98023e-08, 5.58794e-09, -0.106317, -1.88858e-16, 1.76629e-15, 0.994332, 1, 1, 1, 1, 1, 3.55517e-16, -2.98023e-08, 5.58794e-09, -0.106317, -1.39415e-14, -3.27715e-15, 0.994332, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("metarig:spine.004")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, -8.88178e-16, 1.49012e-08, 1.86265e-08, -4.37571e-30, -2.22045e-15, -3.96905e-15, 1, 1, 1, 1, 1, 1, -8.88178e-16, 1.49012e-08, 1.86265e-08, -4.37571e-30, -2.22045e-15, -3.96905e-15, 1, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("metarig:hand.L")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0, 1, 2.23517e-07, 2.98023e-08, -2.32831e-08, 6.51926e-09, -6.0536e-09, 2.06273e-08, 1, 1, 1, 1, 1, 1, 2.23517e-07, 2.98023e-08, -2.32831e-08, 6.51926e-09, -6.0536e-09, 2.06273e-08, 1, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("metarig:forearm.L")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0, 1, -2.17697e-07, -5.96046e-08, -5.21541e-08, 0.480941, -6.28143e-08, -1.86554e-08, 0.876753, 1, 1, 1, 1, 1, -2.17697e-07, -5.96046e-08, -5.21541e-08, 0.480941, -6.28143e-08, -1.86554e-08, 0.876753, 1, 1, 1 )
tracks/4/type = "transform"
tracks/4/path = NodePath("metarig:upper_arm.L")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = PoolRealArray( 0, 1, 5.96046e-08, -2.75671e-07, 1.21072e-07, -0.264631, 0.401813, -0.304252, 0.82216, 1, 1, 1, 0.0666667, 1, 5.96046e-08, -2.30968e-07, 1.19209e-07, -0.228941, 0.379308, -0.311721, 0.84056, 1, 1, 1, 0.133333, 1, 5.96046e-08, -2.83122e-07, 8.19564e-08, -0.145968, 0.325082, -0.326173, 0.875572, 1, 1, 1, 0.2, 1, 0, -3.12924e-07, 5.96046e-08, -0.0249416, 0.241514, -0.340405, 0.90839, 1, 1, 1, 0.266667, 1, -2.98023e-08, -2.83122e-07, 7.07805e-08, 0.116984, 0.137014, -0.347142, 0.920345, 1, 1, 1, 0.333333, 1, 5.96046e-08, -2.16067e-07, 1.19209e-07, 0.255253, 0.0282319, -0.343029, 0.903537, 1, 1, 1, 0.4, 1, 5.96046e-08, -2.6077e-07, 1.22935e-07, 0.349061, -0.0499414, -0.33355, 0.874304, 1, 1, 1, 0.466667, 1, 5.96046e-08, -3.12924e-07, 1.546e-07, 0.396415, -0.0909448, -0.326404, 0.853255, 1, 1, 1, 0.533333, 1, 5.96046e-08, -3.35276e-07, 1.52737e-07, 0.396415, -0.0909448, -0.326404, 0.853255, 1, 1, 1, 0.6, 1, 5.96046e-08, -3.27826e-07, 1.21072e-07, 0.349061, -0.0499413, -0.33355, 0.874304, 1, 1, 1, 0.666667, 1, 5.96046e-08, -3.65078e-07, 1.21072e-07, 0.255253, 0.028232, -0.343029, 0.903537, 0.999999, 1, 1, 0.733333, 1, -5.96046e-08, -3.65078e-07, 1.17347e-07, 0.116984, 0.137014, -0.347142, 0.920345, 1, 1, 1, 0.8, 1, 0, -3.20375e-07, 1.56462e-07, -0.0249417, 0.241515, -0.340405, 0.90839, 1, 1, 1, 0.866667, 1, 5.96046e-08, -3.12924e-07, 1.76951e-07, -0.145968, 0.325082, -0.326173, 0.875572, 1, 1, 1, 0.933333, 1, 5.96046e-08, -3.20375e-07, 1.65775e-07, -0.228941, 0.379308, -0.311721, 0.84056, 1, 1, 1, 1, 1, 5.96046e-08, -2.75671e-07, 1.21072e-07, -0.264631, 0.401813, -0.304252, 0.82216, 1, 1, 1 )
tracks/5/type = "transform"
tracks/5/path = NodePath("metarig:hand.R")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = PoolRealArray( 0, 1, 7.45058e-08, -5.96046e-08, -3.72529e-09, -1.02445e-08, -2.468e-08, -5.90808e-09, 1, 1, 1, 1, 1, 1, 7.45058e-08, -5.96046e-08, -3.72529e-09, -1.02445e-08, -2.468e-08, -5.90808e-09, 1, 1, 1, 1 )
tracks/6/type = "transform"
tracks/6/path = NodePath("metarig:forearm.R")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = PoolRealArray( 0, 1, 3.77884e-07, 2.98023e-08, -3.72529e-08, 0.466951, -3.35361e-08, -4.45612e-08, 0.884284, 1, 1, 1, 1, 1, 3.77884e-07, 2.98023e-08, -3.72529e-08, 0.466951, -3.35361e-08, -4.45612e-08, 0.884284, 1, 1, 1 )
tracks/7/type = "transform"
tracks/7/path = NodePath("metarig:upper_arm.R")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = PoolRealArray( 0, 1, 0, -5.21541e-08, -1.15484e-07, 0.471493, 0.0890617, 0.330731, 0.812638, 1, 1, 1, 0.0666667, 1, 2.98023e-08, -3.72529e-08, -7.07805e-08, 0.437418, 0.0598577, 0.339639, 0.830499, 1, 1, 1, 0.133333, 1, 0, -5.96046e-08, -5.96046e-08, 0.355201, -0.00772821, 0.356984, 0.863907, 1, 1, 1, 0.2, 1, 0, -5.96046e-08, -7.82311e-08, 0.229212, -0.104602, 0.373917, 0.892584, 1, 1, 1, 0.266667, 1, 0, -5.21541e-08, -1.15484e-07, 0.0738091, -0.214651, 0.381197, 0.896195, 1, 1, 1, 0.333333, 1, 0, -5.21541e-08, -1.15484e-07, -0.0842754, -0.316903, 0.374629, 0.867251, 1, 1, 1, 0.4, 1, -8.9407e-08, -7.45058e-09, -1.17347e-07, -0.193943, -0.382115, 0.361826, 0.827923, 1, 1, 1, 0.466667, 1, -2.98023e-08, -1.49012e-08, -1.35973e-07, -0.250187, -0.413638, 0.35249, 0.801287, 1, 1, 1, 0.533333, 1, 0, -4.47035e-08, -1.3411e-07, -0.250188, -0.413638, 0.352491, 0.801286, 1, 1, 1, 0.6, 1, 0, -7.45058e-08, -1.17347e-07, -0.193943, -0.382115, 0.361826, 0.827923, 1, 1, 1, 0.666667, 1, 2.98023e-08, -2.23517e-08, -1.17347e-07, -0.0842753, -0.316903, 0.374629, 0.867251, 1, 1, 1, 0.733333, 1, 0, -3.72529e-08, -1.39698e-07, 0.0738092, -0.214651, 0.381197, 0.896195, 1, 1, 1, 0.8, 1, 0, -3.72529e-08, -1.45286e-07, 0.229212, -0.104602, 0.373917, 0.892584, 1, 1, 1, 0.866667, 1, 5.96046e-08, -6.70552e-08, -1.47149e-07, 0.355201, -0.00772813, 0.356984, 0.863907, 1, 1, 1, 0.933333, 1, 1.19209e-07, -7.45058e-08, -1.41561e-07, 0.437418, 0.0598578, 0.339639, 0.830498, 1, 1, 1, 1, 1, 0, -5.21541e-08, -1.15484e-07, 0.471493, 0.0890617, 0.330731, 0.812638, 1, 1, 1 )
tracks/8/type = "transform"
tracks/8/path = NodePath("metarig:spine.002")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = PoolRealArray( 0, 1, -4.44089e-15, 2.98023e-08, -2.98023e-08, 1.36818e-29, -2.22045e-15, 2.33147e-15, 1, 1, 1, 1, 1, 1, -4.44089e-15, 2.98023e-08, -2.98023e-08, 1.36818e-29, -2.22045e-15, 2.33147e-15, 1, 1, 1, 1 )
tracks/9/type = "transform"
tracks/9/path = NodePath("metarig:shin.L")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = PoolRealArray( 0, 1, 2.6077e-08, -2.98023e-08, 1.04308e-07, 0.0648798, -5.57068e-09, 0.00631048, 0.997873, 0.999999, 1, 1, 0.0666667, 1, 2.6077e-08, 2.98023e-08, -3.72529e-08, 0.313426, 8.34058e-09, 0.030485, 0.949123, 1, 1, 0.999999, 0.133333, 1, 3.53903e-08, 5.96046e-08, -8.19564e-08, 0.500825, 3.2331e-08, 0.0487122, 0.864177, 1, 1, 0.999999, 0.2, 1, 2.8871e-08, 8.9407e-08, -5.96046e-08, 0.481468, 1.9154e-08, 0.0468294, 0.875212, 1, 1, 0.999999, 0.266667, 1, 8.3819e-09, 8.9407e-08, -3.72529e-08, 0.302278, -1.27074e-08, 0.0294007, 0.952766, 1, 1, 1, 0.333333, 1, -3.72529e-09, 2.98023e-08, -4.47035e-08, 0.226867, -2.36734e-08, 0.0220659, 0.973676, 1, 1, 1, 0.4, 1, 8.3819e-09, 8.9407e-08, 0, 0.351356, -2.6876e-08, 0.0341743, 0.935618, 1, 1, 1, 0.466667, 1, 1.95578e-08, 5.96046e-08, 1.49012e-08, 0.430534, -3.40878e-08, 0.0418754, 0.901603, 1, 1, 1, 0.533333, 1, 1.39698e-08, 5.96046e-08, 0, 0.537325, -3.98306e-08, 0.0522623, 0.841754, 1, 1, 1, 0.6, 1, 5.58794e-09, 8.9407e-08, -2.23517e-08, 0.658591, -3.72643e-08, 0.0640571, 0.74977, 1, 1, 0.999999, 0.666667, 1, 4.09782e-08, 8.9407e-08, -5.21541e-08, 0.722297, -1.89512e-08, 0.0702534, 0.688005, 1, 1, 0.999999, 0.733333, 1, 4.19095e-08, 0, -7.45058e-08, 0.721701, 5.40966e-09, 0.0701954, 0.688636, 1, 1, 0.999999, 0.8, 1, 4.19095e-08, 0, -1.19209e-07, 0.695606, 2.34383e-08, 0.0676573, 0.715231, 1, 1, 0.999999, 0.866667, 1, 3.44589e-08, 2.98023e-08, -8.9407e-08, 0.58203, 3.67388e-08, 0.0566105, 0.811194, 1, 1, 0.999999, 0.933333, 1, 2.6077e-08, 5.96046e-08, 7.45058e-09, 0.353737, 8.46918e-09, 0.0344059, 0.934712, 0.999999, 1, 0.999999, 1, 1, 2.6077e-08, -2.98023e-08, 1.04308e-07, 0.0648798, -5.42485e-09, 0.00631048, 0.997873, 0.999999, 1, 1 )
tracks/10/type = "transform"
tracks/10/path = NodePath("metarig:thigh.L")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = PoolRealArray( 0, 1, 0, 0, -2.79397e-09, -0.482408, -0.0283694, -7.42872e-05, 0.875487, 1, 1, 1, 0.0666667, 1, 1.49012e-08, 0, -2.79397e-09, -0.577113, -0.0318325, -0.0158602, 0.815889, 1, 1, 1, 0.133333, 1, 7.45058e-09, 0, -1.16415e-08, -0.572802, -0.0319793, -0.0308283, 0.818489, 1, 1, 1, 0.2, 1, 0, 2.23517e-08, -5.58794e-09, -0.39668, -0.0647226, -0.0459068, 0.914521, 1, 1, 1, 0.266667, 1, 0, 4.47035e-08, 1.49012e-08, -0.0887557, -0.0866652, -0.0462443, 0.991198, 1, 1, 1, 0.333333, 1, 0, -7.45058e-09, 2.70084e-08, 0.105837, 0.00932049, -0.0117022, 0.994271, 1, 1, 1, 0.4, 1, 0, 0, 3.25963e-09, 0.118631, 0.0142622, -0.0184836, 0.992664, 1, 1, 1, 0.466667, 1, 0, 0, -2.79397e-09, 0.122355, 0.0181982, -0.022644, 0.992061, 1, 1, 1, 0.533333, 1, 7.45058e-09, 0, 9.31323e-09, 0.0348465, 0.0202864, -0.0287374, 0.998773, 1, 1, 1, 0.6, 1, 1.49012e-08, 0, 1.81608e-08, -0.170092, 0.0181182, -0.0368703, 0.984572, 1, 1, 1, 0.666667, 1, 0, 0, -1.76951e-08, -0.448445, 0.00805698, -0.0423415, 0.892771, 1, 1, 1, 0.733333, 1, 0, 4.47035e-08, 6.0536e-09, -0.601278, -0.0133728, -0.0481062, 0.797478, 1, 1, 1, 0.8, 1, 0, 2.23517e-08, 2.09548e-08, -0.68838, -0.0326308, -0.0473982, 0.723064, 1, 1, 1, 0.866667, 1, 0, 2.23517e-08, 2.09548e-08, -0.688621, -0.0404148, -0.0367156, 0.723063, 1, 1, 1, 0.933333, 1, 0, 4.47035e-08, 8.84756e-09, -0.607896, -0.036262, -0.0181765, 0.79298, 1, 1, 1, 1, 1, 0, 0, -2.79397e-09, -0.482408, -0.0283694, -7.42872e-05, 0.875487, 1, 1, 1 )
tracks/11/type = "transform"
tracks/11/path = NodePath("metarig:shin.R")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = PoolRealArray( 0, 1, 4.65661e-09, 2.98023e-08, -7.45058e-08, 0.388115, 3.18587e-08, -0.0377495, 0.920838, 1, 0.999999, 1, 0.0666667, 1, 3.72529e-09, 8.9407e-08, -5.21541e-08, 0.515931, 4.35626e-08, -0.0501813, 0.855159, 1, 1, 1, 0.133333, 1, -4.65661e-09, 8.9407e-08, -5.21541e-08, 0.630187, 4.33162e-08, -0.0612943, 0.77402, 0.999999, 1, 1, 0.2, 1, 5.58794e-09, 1.19209e-07, -3.72529e-08, 0.67001, 3.0226e-08, -0.0651676, 0.739486, 1, 1, 1, 0.266667, 1, 3.63216e-08, 8.9407e-08, 1.49012e-08, 0.647563, -4.90554e-09, -0.0629844, 0.759405, 1, 1, 1, 0.333333, 1, 4.74975e-08, 0, 4.47035e-08, 0.632999, -1.68958e-08, -0.061568, 0.7717, 1, 1, 1, 0.4, 1, 2.51457e-08, -5.96046e-08, -7.45058e-09, 0.376798, -1.00622e-09, -0.0366489, 0.92557, 1, 1, 1, 0.466667, 1, 1.95578e-08, 5.96046e-08, -5.21541e-08, 0.171232, -2.00902e-09, -0.0166548, 0.98509, 1, 1, 1, 0.533333, 1, 1.95578e-08, 5.96046e-08, -5.21541e-08, 0.206161, -1.52315e-08, -0.0200521, 0.978313, 1, 1, 1, 0.6, 1, 1.86265e-08, -5.96046e-08, -7.45058e-09, 0.43175, -2.48073e-08, -0.0419937, 0.901015, 0.999999, 1, 1, 0.666667, 1, 1.86265e-08, -5.96046e-08, 4.47035e-08, 0.589608, -3.93036e-08, -0.0573476, 0.805651, 1, 1, 1, 0.733333, 1, 2.98023e-08, 2.98023e-08, 0, 0.308422, -3.62429e-08, -0.0299983, 0.950777, 1, 1, 1, 0.8, 1, 6.51926e-09, 5.96046e-08, 2.23517e-08, 0.144733, -1.62379e-08, -0.0140773, 0.989371, 0.999999, 0.999999, 1, 0.866667, 1, -5.58794e-09, 8.9407e-08, 2.23517e-08, 0.181153, 3.90696e-09, -0.0176196, 0.983297, 0.999999, 0.999999, 1, 0.933333, 1, 2.79397e-09, 8.9407e-08, -2.98023e-08, 0.334325, 1.82923e-08, -0.0325176, 0.941897, 1, 1, 1, 1, 1, 4.65661e-09, 2.98023e-08, -7.45058e-08, 0.388115, 3.18587e-08, -0.0377495, 0.920838, 1, 0.999999, 1 )
tracks/12/type = "transform"
tracks/12/path = NodePath("metarig:thigh.R")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = PoolRealArray( 0, 1, -1.49012e-08, -5.96046e-08, -1.72295e-08, 0.165889, -0.0221818, 0.0169415, 0.98575, 1, 1, 1, 0.0666667, 1, 0, -1.49012e-08, -2.93367e-08, 0.0324986, -0.0245691, 0.0220242, 0.998927, 1, 1, 1, 0.133333, 1, -7.45058e-09, 0, -4.14439e-08, -0.165955, -0.0248256, 0.0279772, 0.985424, 1, 1, 1, 0.2, 1, -7.45058e-09, 0, -2.98023e-08, -0.342248, -0.0115198, 0.0352744, 0.938877, 1, 1, 1, 0.266667, 1, 0, -1.49012e-08, -2.79397e-09, -0.502717, 0.0133441, 0.04189, 0.863332, 1, 1, 1, 0.333333, 1, 1.49012e-08, -5.96046e-08, -2.79397e-09, -0.720094, 0.0350377, 0.0404475, 0.69181, 1, 1, 1, 0.4, 1, 0, -5.96046e-08, -1.44355e-08, -0.639551, 0.0364383, 0.0195188, 0.767637, 1, 1, 1, 0.466667, 1, -1.49012e-08, -5.96046e-08, -2.6077e-08, -0.550753, 0.0368299, 0.00469895, 0.833842, 1, 1, 1, 0.533333, 1, -2.23517e-08, -8.19564e-08, -1.44355e-08, -0.544329, 0.0364498, 0.00727272, 0.838048, 1, 1, 1, 0.6, 1, -1.49012e-08, -1.19209e-07, 3.25963e-09, -0.58787, 0.0347847, 0.0245217, 0.807835, 1, 1, 1, 0.666667, 1, -2.98023e-08, -1.19209e-07, -3.25963e-08, -0.525802, 0.0305189, 0.0398384, 0.849125, 1, 1, 1, 0.733333, 1, -2.98023e-08, -7.45058e-08, -8.84756e-09, -0.143733, 0.282431, 0.111077, 0.941932, 1, 1, 1, 0.8, 1, -1.49012e-08, -9.68575e-08, -2.32831e-09, 0.107666, 0.130777, 0.0535648, 0.984092, 1, 1, 1, 0.866667, 1, -7.45058e-09, -7.45058e-08, -8.84756e-09, 0.189529, -0.0160088, 0.00718359, 0.981718, 1, 1, 1, 0.933333, 1, -1.49012e-08, -1.49012e-08, -1.76951e-08, 0.169624, -0.0205139, 0.0140402, 0.985195, 1, 1, 1, 1, 1, -1.49012e-08, -5.96046e-08, -1.72295e-08, 0.165889, -0.0221818, 0.0169415, 0.98575, 1, 1, 1 )
tracks/13/type = "transform"
tracks/13/path = NodePath("metarig:spine.003")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = PoolRealArray( 0, 1, -1.19904e-14, -3.95347e-08, 1.2319e-08, -1.49012e-07, -7.81596e-14, -5.32907e-13, 1, 1, 1, 1, 1, 1, -1.19904e-14, -3.95347e-08, 1.2319e-08, -1.49012e-07, -7.81596e-14, -5.32907e-13, 1, 1, 1, 1 )
tracks/14/type = "transform"
tracks/14/path = NodePath("metarig:spine.001")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = PoolRealArray( 0, 1, -6.26077e-08, -0.146483, 0.062596, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.133333, 1, -5.91748e-08, -0.239071, 0.0433979, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.2, 1, -5.68863e-08, -0.231978, 0.0448686, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.333333, 1, -6.15003e-08, -0.111018, 0.0699499, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.4, 1, -6.15003e-08, -0.114564, 0.0692145, 0.149553, 1.26024e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.466667, 1, -6.21648e-08, -0.13407, 0.0651698, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.533333, 1, -6.26077e-08, -0.17495, 0.0566934, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.6, 1, -6.14634e-08, -0.226564, 0.0459912, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.666667, 1, -5.68863e-08, -0.262218, 0.0385983, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.8, 1, -5.96547e-08, -0.141258, 0.0636795, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 0.866667, 1, -6.15003e-08, -0.118111, 0.0684791, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1, 1, 1, -6.26077e-08, -0.146483, 0.062596, 0.149553, 1.26025e-09, 2.22063e-08, 0.988754, 1, 1, 1 )
tracks/15/type = "transform"
tracks/15/path = NodePath("metarig:L_IK")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = PoolRealArray( 0, 1, -6.98492e-08, -5.96046e-08, 5.96046e-08, 2.98023e-08, 5.82077e-10, -1.73472e-17, 1, 1, 1, 1, 1, 1, -6.98492e-08, -5.96046e-08, 5.96046e-08, 2.98023e-08, 5.82077e-10, -1.73472e-17, 1, 1, 1, 1 )
tracks/16/type = "transform"
tracks/16/path = NodePath("metarig:foot.L")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = PoolRealArray( 0, 1, 2.23517e-07, 0.561309, -0.227823, -0.259149, 1.28743e-13, -2.47144e-07, 0.965837, 1, 1, 1, 0.0666667, 1, 1.78814e-07, 0.496448, -0.208087, -0.185564, 1.06657e-13, -1.76969e-07, 0.982632, 1, 1, 1, 0.133333, 1, 1.19209e-07, 0.327196, -0.12861, -0.0902154, 1.13439e-12, -8.60381e-08, 0.995922, 1, 1, 1, 0.2, 1, 1.49012e-08, 0.0613243, -0.0141504, -0.0425871, 5.73579e-12, -4.06199e-08, 0.999093, 1, 1, 1, 0.266667, 1, -4.47035e-08, -0.25393, 0.0581156, 0.111424, 1.12831e-11, 1.06258e-07, 0.993773, 1, 1, 1, 0.333333, 1, 4.47035e-08, -0.531865, -0.0414059, 0.683092, 8.13347e-12, 6.51463e-07, 0.730332, 1, 0.999999, 1, 0.4, 1, 1.49012e-07, -0.613515, -0.149922, 0.741696, 5.59335e-12, 7.07349e-07, 0.670736, 1, 0.999999, 1, 0.466667, 1, 1.93715e-07, -0.642675, -0.207177, 0.780474, -1.20926e-11, 7.44329e-07, 0.625188, 1, 0.999999, 1, 0.533333, 1, 2.23517e-07, -0.561778, -0.206072, 0.783568, -2.47023e-11, 7.47284e-07, 0.621306, 1, 0.999999, 1, 0.6, 1, 1.93715e-07, -0.358032, -0.163693, 0.74725, -3.03659e-11, 7.12659e-07, 0.664543, 1, 0.999998, 1, 0.666667, 1, 1.19209e-07, -0.0634253, -0.121313, 0.677202, -4.46529e-11, 6.45863e-07, 0.735797, 1, 0.999998, 1, 0.733333, 1, 2.23517e-07, 0.0967472, -0.233817, 0.366298, 3.94178e-11, 3.49403e-07, 0.930498, 1, 0.999999, 1, 0.8, 1, 3.27826e-07, 0.213626, -0.346322, 0.0365942, 4.65428e-11, 3.49423e-08, 0.99933, 1, 1, 1, 0.866667, 1, 3.42727e-07, 0.339998, -0.367624, -0.170709, 3.20442e-11, -1.62791e-07, 0.985322, 1, 1, 1, 0.933333, 1, 2.98023e-07, 0.474437, -0.297723, -0.240125, 2.10822e-11, -2.28999e-07, 0.970742, 1, 1, 1, 1, 1, 2.23517e-07, 0.561309, -0.227823, -0.259149, 1.28743e-13, -2.47144e-07, 0.965837, 1, 1, 1 )
tracks/17/type = "transform"
tracks/17/path = NodePath("metarig:R_IK")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = PoolRealArray( 0, 1, -1.95578e-08, 5.96046e-08, -2.98023e-08, 2.98023e-08, -5.82077e-10, 1.73472e-17, 1, 1, 1, 1, 1, 1, -1.95578e-08, 5.96046e-08, -2.98023e-08, 2.98023e-08, -5.82077e-10, 1.73472e-17, 1, 1, 1, 1 )
tracks/18/type = "transform"
tracks/18/path = NodePath("metarig:foot.R")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = PoolRealArray( 0, 1, -2.5332e-07, -0.677159, -0.199086, 0.838164, -2.6055e-12, -7.99337e-07, 0.545418, 1, 0.999999, 1, 0.0666667, 1, -2.5332e-07, -0.546363, -0.158319, 0.850512, -2.48576e-12, -8.11112e-07, 0.525955, 1, 0.999999, 1, 0.133333, 1, -2.38419e-07, -0.348818, -0.117552, 0.845231, -2.81876e-12, -8.06075e-07, 0.534402, 1, 0.999999, 1, 0.2, 1, -2.08616e-07, -0.156133, -0.11058, 0.676976, -1.60257e-12, -6.45613e-07, 0.736005, 1, 0.999998, 1, 0.266667, 1, -2.08616e-07, 0.0381144, -0.185069, 0.281279, 4.25751e-13, -2.68245e-07, 0.959626, 1, 0.999999, 1, 0.333333, 1, -4.32134e-07, 0.318375, -0.402558, -0.0317419, -2.38152e-13, 3.02757e-08, 0.999496, 1, 1, 1, 0.4, 1, -3.8743e-07, 0.486117, -0.358554, -0.231733, -2.84866e-13, 2.21003e-07, 0.97278, 1, 1, 1, 0.466667, 1, -3.27826e-07, 0.557558, -0.29147, -0.334587, -1.28934e-12, 3.19092e-07, 0.942365, 1, 1, 1, 0.533333, 1, -2.68221e-07, 0.535763, -0.228239, -0.307925, -1.9903e-12, 2.93665e-07, 0.951411, 1, 1, 1, 0.6, 1, -2.23517e-07, 0.413974, -0.163795, -0.174761, -2.13608e-12, 1.6667e-07, 0.984611, 1, 1, 1, 0.666667, 1, -1.3411e-07, 0.175606, -0.0610746, -0.0223223, -2.36309e-12, 2.12921e-08, 0.999751, 1, 1, 1, 0.733333, 1, -4.47035e-08, -0.171971, 0.0741923, -0.0361908, -1.40985e-12, 3.45181e-08, 0.999345, 1, 1, 1, 0.8, 1, -1.49012e-08, -0.454595, 0.0262552, 0.497347, -4.00501e-12, -4.74306e-07, 0.867552, 1, 0.999999, 1, 0.866667, 1, -8.9407e-08, -0.617309, -0.0803115, 0.802443, -5.09632e-12, -7.6527e-07, 0.596729, 1, 0.999999, 1, 0.933333, 1, -1.93715e-07, -0.667952, -0.166543, 0.835327, -4.29102e-12, -7.96631e-07, 0.549753, 1, 0.999999, 1, 1, 1, -2.5332e-07, -0.677159, -0.199086, 0.838164, -2.6055e-12, -7.99337e-07, 0.545418, 1, 0.999999, 1 )

[node name="Char" type="Spatial"]
script = ExtResource( 1 )

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Char_Area" type="Area" parent="."]
priority = 3.0
collision_mask = 3

[node name="Char_CollisionShape" type="CollisionShape" parent="Char_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03299, 0 )
shape = SubResource( 1 )

[node name="ActionAnims" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 2 )

[node name="Model" type="Spatial" parent="."]

[node name="Demo" parent="Model" instance=ExtResource( 2 )]

[node name="basemesh" parent="Model/Demo/metarig" index="0"]
material/0 = ExtResource( 3 )

[node name="AnimationPlayer" parent="Model/Demo" index="2"]
next/metarigAction = "metarigAction"

[node name="Jump" parent="Model" instance=ExtResource( 2 )]
visible = false

[node name="basemesh" parent="Model/Jump/metarig" index="0"]
material/0 = ExtResource( 4 )

[node name="AnimationPlayer" parent="Model/Jump" index="2"]
anims/metarigAction = SubResource( 3 )
[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
[connection signal="area_shape_entered" from="Char_Area" to="." method="_on_Char_Area_area_shape_entered"]
[connection signal="body_shape_entered" from="Char_Area" to="." method="_on_Char_Area_body_shape_entered"]
[connection signal="animation_finished" from="ActionAnims" to="." method="_on_ActionAnims_animation_finished"]

[editable path="Model/Demo"]

[editable path="Model/Jump"]
